[package]
name = "mushman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.10.1", features = []}
bevy_asset_loader = { version = "0.16.0", features = ["2d", "progress_tracking"] }
iyes_progress = { version = "0.8.0", features = ["bevy_asset", "assets"] }
leafwing-input-manager = "0.9.2"
log = "0.4.17"
ndarray = { version = "0.15.6", features = ["serde", "rayon"] }
nom = "7.1.3"
