[package]
name = "mushman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_asset_loader = { version = "0.16.0", features = [
    "2d",
    "progress_tracking",
] }
bevy_kira_audio = { version = "0.15.0", features = [
    "mp3",
    "ron",
    "serde",
    "settings_loader",
] }
itertools = "0.10.5"
iyes_progress = { version = "0.8.0", features = ["bevy_asset", "assets"] }
leafwing-input-manager = "0.9.2"
log = "0.4.17"
ndarray = { version = "0.15.6", features = ["serde", "rayon"] }
nom = "7.1.3"


[dependencies.bevy]
version = "0.10"
default-features = false
features = [
    "animation",
    "bevy_gilrs",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "x11",
    "filesystem_watcher",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "dynamic_linking",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
